ultimape Pog fix bug 100% alignment PepoG

--- a/projects/demo/src/app/user/vectors/edit-vector/edit-vector.component.scss
+++ b/projects/demo/src/app/user/vectors/edit-vector/edit-vector.component.scss
@@ -8,12 +8,13 @@
 
 #WorkspaceContainer {
   overflow: hidden;
+  height: 100%;
 
   canvas#Workspace {
     // outline: solid 10px gray;
     touch-action: pinch-zoom;
     position: absolute;
-    height: 100vh;
+    // height: 100vh;
   }
 }
 
